cluster/medea/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: medea
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
